1998-03-31  Stefan Taferner  <taferner@kde.org> (KMail-0.6.5)

	* Folders: fixed bug introduced on 1998-03-26: open failed on
	folders where lock() returned an error.

1998-03-28  Stefan Taferner  <taferner@kde.org>

	* Headers: when opening a folder the contents was not automatically
	sorted, now is.

	* Pop: new messages retrieved from pop accounts were not
	marked new. Now fixed.

1998-03-26  Stefan Taferner  <taferner@kde.org>

	* Folders: when opening and locking a folder there were
	cases (in fact most of the time) when the folder seemed
	to be not locked but was. Now this is handled better.

1998-03-24  Stefan Taferner  <taferner@kde.org>  (KMail-0.6.4)

	* Message: decoding of quoted-printable RFC1522 strings
	was broken for strings that started with a decoded character.

1998-03-18  Stefan Taferner  <taferner@kde.org>

	* Reader: improved detection of urls and email addresses
	to ignore special characters at the end, e.g. "." or ")".

	* Messagelist: finally fixed sorting of messages. Also
	implemented ascending/descending/none sorting (use multiple
	clicks on the column headers to switch). Sorting order "none"
	is what was IMO missing for the trash folder :-)

1998-03-17  Stefan Taferner  <taferner@kde.org>  (KMail-0.6.3)

	* Composer: in menu view, when 'all headers' view is 
	activated, then the individual header line menu entries are 
	disabled now.

	* Folders: changed creation of folders to -rw-------
	instead of the default -rw-r--r--. Same for the initial
	creation of ~/Mail.

	* Attachments: temporary files (when viewing attachments)
	are now also created with permissions -rw-------.
	
1998-03-15  Stefan Taferner  <taferner@kde.org>  (KMail-0.6.2)

	* Startup: added option -check which does mail checking
	upon startup. Also options that start with a '-' but which
	are unknown are now skipped.

1998-03-09  Stefan Taferner  <taferner@kde.org>  (KMail-0.6.1)

	* Reader: '_' was not considered part of a smart-detected email